--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Guber</title>
+    <title>Projeto Guber </title>
+    <link rel="shortcut icon" href="images/guinea-bissau-waving-flag.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header class="navbar">
+        <div class="logo">
+            <img src="images/guinea-bissau-waving-flag.png" alt="Bandeira da Guiné-Bissau" class="logo-img">
+            <span>Guber</span>
+        </div>
+        <nav class="nav-links">
+            <a href="#">Início</a>
+            <a href="#">Pedir Viagem</a>
+            <a href="#">Motorista</a>
+            <a href="#">Sobre</a>
+        </nav>
+        <button class="btn-entrar">Entrar</button>
+    </header>
 </body>
+
 </html>
